[project]
name = "qiniu-mcp"
version = "0.1.0"
description = "A MCP server project"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.0.0",
    "openai>=1.66.3",
    "pip>=25.0.1",
    "python-dotenv>=1.0.1",
    "qiniu>=7.16.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[project.scripts]
qiniu-mcp-server = "mcp_server:main"
