[project]
name = "qiniu-mcp-server"
version = "1.3.1"
description = "A MCP server project of Qiniu."
requires-python = ">=3.12"
authors = [
    { name = "Qiniu", email = "sdk@qiniu.com" },
]
keywords = ["qiniu", "mcp", "llm"]
dependencies = [
    "aiohttp>=3.9.0",
    "aioboto3>=13.2.0",
    "fastjsonschema>=2.21.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.0.0",
    "openai>=1.66.3",
    "pip>=25.0.1",
    "python-dotenv>=1.0.1",
    "qiniu>=7.16.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
qiniu-mcp-server = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]